# aias-verifier

./: Cargo.toml  README.md
src/: main.rs
