[package]
name = "aias-verifier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "0.15.5"
base64 = "0.13.0"
serde_json = "1"
rand = "0.8.4"

[dependencies.distributed-bss]
git="https://github.com/pj-aias/distributed-bss"
branch = "main"